testsuite/single/tests/compiler/fail/div_zero3.lpc
int foo() {
    return 1/0.0;
}
